--- a/OOP7/OOP7.csproj
+++ b/OOP7/OOP7.csproj
@@ -46,20 +46,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Ccircle.cs" />
+    <Compile Include="PaintBox.cs" />
+    <Compile Include="Shape\Ccircle.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="MyList.cs" />
-    <Compile Include="Base.cs" />
+    <Compile Include="Storage\MyList.cs" />
+    <Compile Include="Storage\Base.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="rectangle.cs" />
-    <Compile Include="Square.cs" />
-    <Compile Include="Triangle.cs" />
+    <Compile Include="Shape\rectangle.cs" />
+    <Compile Include="Shape\Square.cs" />
+    <Compile Include="Shape\Triangle.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
