--- a/OOP7/OOP7.csproj
+++ b/OOP7/OOP7.csproj
@@ -47,7 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PaintBox.cs" />
-    <Compile Include="Shape\Ccircle.cs" />
+    <Compile Include="Shape\Circle.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -58,7 +58,7 @@
     <Compile Include="Storage\Base.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Shape\rectangle.cs" />
+    <Compile Include="Shape\Rectangle.cs" />
     <Compile Include="Shape\Square.cs" />
     <Compile Include="Shape\Triangle.cs" />
     <EmbeddedResource Include="Form1.resx">
